fixed overflow issue on cards in equipe page

--- a/partials/_equipe.scss
+++ b/partials/_equipe.scss
@@ -31,6 +31,11 @@
     flex-wrap: wrap;
     max-width: 400px;
 
+    .card-body {
+        max-width: 100%;
+
+    }
+
 
 }
 
@@ -60,4 +65,5 @@
     text-align: center;
     font-size: 14px;;
 }
+
 
