--- a/style.css
+++ b/style.css
@@ -397,6 +397,9 @@ svg {
   flex-wrap: wrap;
   max-width: 400px;
 }
+.equipe .card .card-body {
+  max-width: 100%;
+}
 
 .texte-equipe {
   font-family: dosis;
